# setup

./: .bazelignore  .bazeliskrc  .bazelrc  .chezmoiroot  .devcontainer.json  .dockerignore  .env.tpl  .envrc  .gitignore  .mcp.json  .op.env  .plzconfig  .pre-commit-config.yaml  .prettierignore  .terraformignore  .tool-versions  404.html  AGENTS.md  BUILD  BUILD.bazel  BUILD.pants  BUILD.plz  CLAUDE.md  Caddyfile  FINDINGS.md  LICENSE  MIGRATION.md  MODULE.bazel  README.md  TEST_PUSH_GIT  Taskfile.yml  Vagrantfile  WORKSPACE  WORKSPACE.bzlmod  aws_profiles  build.nix  buildbuddy.yaml  bunq2ynab.code-workspace  config.yaml  dagger.json  (+52 more)
apps/hypervisor/: BUILD.bazel  OpenNebulaNetwork.conf.j2  deploy.py  inventory.py  onegate-server.conf.j2  provision.yml  sync.sh
apps/hypervisor/tasks/: install_cni.py  install_consul.py  install_docker.py  install_envoy.py  install_nomad.py  install_qemu.py
devenv/: README.md  bootstrap.sh  deploy.py  pyproject.toml
devenv/helpers/: home_link.py  macos.py  symlink.py
esphome_nimble/: BUILD.bazel  config.yaml  esphome_config.yaml  extract_platformio.sh  nimble.h  platformio.ini  post_build.py  update_project.sh
esphome_nimble/components/nimble_distance/: OneEuro.h  SoftFilters.h  Tree.h  framework.h  nimble_distance_sensor.cpp  nimble_distance_sensor.h  sensor.py  types.h
esphome_nimble/components/nimble_rssi/: irk_utils.cpp  irk_utils.h  nimble_rssi_sensor.cpp  nimble_rssi_sensor.h  sensor.py  string_utils.cpp  string_utils.h
esphome_nimble/components/nimble_tracker/: __init__.py  irk_utils.cpp  irk_utils.h  nimble_device_listener.cpp  nimble_device_listener.h  nimble_tracker.cpp  nimble_tracker.h  nimble_tracker_event.cpp  nimble_tracker_event.h  queue.h  string_utils.cpp  string_utils.h
esphome_nimble/custom_components/: nimble.h
esphome_nimble/src/: esphome.h  main.cpp
hypervisor/: 50-network-bridge.yaml.j2  BUILD  BUILD.bazel  Gemfile  Vagrantfile  Vagrantfile.cloud-init  ansible_requirements.yml  configuration.nix  deploy.py  flake.nix  hardware-configuration.nix  hypervisor.pkr.hcl  hypervisor_lima.yml  inventory.py  kitchen.yml  main.py  oned.conf.j2  onevm.yaml.j2  packer_qemu.pkr.hcl  provision.sh  provision.yml  requirements.txt  requirements_lock.txt  rules.v4.j2  sunstone-server.conf.j2
hypervisor/cloud-init/: user-data
hypervisor/files/: ignited.service  nomad.hcl
hypervisor/tasks/: install_cni.py  install_consul.py  install_docker.py  install_envoy.py  install_nomad.py  install_qemu.py
infrastructure/: BUILD.bazel  Pulumi.yaml  __main__.py  bazarr.py  config.gateway.json  deluge.py  jackett.py  k8s-control-plane.yaml  k8s-worker.yaml  onepassword.py  plex.py  pyproject.toml  radarr.py  rclone.py  requirements.in  requirements.txt  requirements_lock.txt  runner.py  sonarr.py  test-job.hcl  test-vm.yaml  transmission.py
infrastructure/modules/ssh_tunnel/: main.tf  output.tf  tunnel.sh  variables.tf
infrastructure/stacks/: backend.tm.hcl  config.tm.hcl  providers.tm.hcl  variables.tm.hcl
infrastructure/stacks/base/: .terraform.lock.hcl  _terramate_generated_backend.tf  _terramate_generated_providers.tf  _terramate_generated_variables.tf  main.tf  stack.tm.hcl  variables.tf
infrastructure/stacks/provisioner/: .terraform.lock.hcl  Pulumi.yaml  main.tf  (+4 more)
infrastructure_old/: bazarr.py  onepassword_connect.py  plex.py  pyproject.toml  radarr.py
libs/ansible/: TESTING.md  moon.yml  pyproject.toml  requirements-dev.txt  requirements.yml  test-all-roles.sh
libs/bunq2ynab/: BUILD.bazel  BUILD.repositories.bazel.tpl  CHANGELOG.md  config-prod.json.tpl  container-labels.txt  moon.yml  package.json
libs/cdk8s-function-xp/: Dockerfile  README.md  cdk8s.yaml  crossplane.yaml  project.json  pyproject.toml
libs/coder-logstream-process/: .gitignore  moon.yml  pyproject.toml
libs/coder-mcp/: .env.example  .env.tpl  .gitignore  README.md  main.py  package.json  project.json  pyproject.toml
libs/cross/: Dockerfile  moon.yml  pyproject.toml
libs/dev-cluster/: CHANGELOG.md  README.md  moon.yml  package.json  pyproject.toml
libs/external-dns-cleanup/: .env.tpl  CHANGELOG.md  external-dns-cleanup  moon.yml  package.json  pyproject.toml
libs/fleet-mcp/: .env.tpl  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  architecture.md  moon.yml  package.json  pyproject.toml  release.sh
libs/fleet-mcp-clean/: .env.example  README.md  package.json  pyproject.toml
libs/friendo/: CLAUDE.md  Taskfile.yml  pyproject.toml
libs/helm-platform/: moon.yml  pyproject.toml
libs/internal-dns-xp/: README.md  crossplane.yaml  definition.yaml  project.json  pyproject.toml
libs/occupancy_component/: BUILD.bazel  CHANGELOG.md  Dockerfile  Tiltfile  configuration.yaml  docker-compose.yml  moon.yml  onboarding  package.json  pyproject.toml
libs/onepassword/: BUILD.bazel  defs.bzl  moon.yml  package.json  project.json
libs/python/: BUILD.bazel  defs.bzl  moon.yml  package.json  project.json  python_base_image.nix
occupancy_component/: BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  Tiltfile  automations.yaml  configuration.yaml  docker-compose.yml  requirements.in  requirements.test.txt
occupancy_component/tests/: conftest.py  helpers.py  test_area.py  test_door.py  test_init.py
provisioner/: .gitignore  .terraform.lock.hcl  BUILD  BUILD.bazel  CHANGELOG.md  Dockerfile  README.md  Vagrantfile  bootstrap-dev.sh  build.sh  build.yml  build_arm.sh  build_vm.sh  deploy.auto.tfvars  deploy.py  deploy_mark.py  image.cfg  inventory.py  main.tf  packer.json  packer_arm.pkr.hcl  packer_qemu.pkr.hcl  playbook.yml  provision.yml  setup-raspberry-pi.md  teleport_ssh.py  test_provisioner.py  user-data  utils.py  vagrant_machine.tf  variables.tf  vars.yml
provisioner/cloud-init/: user-data  user-data.cfg  vendor-data
provisioner/connectors/: teleport.py
provisioner/facts/: onepassword.py
provisioner/group_data/: dev.py  prod.py  test.py
workstation/: BUILD.bazel  README.md  bootstrap.sh  deploy.py  inspec.yml  inventory.py
workstation/controls/: workstation.rb
workstation/helpers/: home_link.py  macos.py  onepassword.py
(+4403 files in other folders)
