"""
All the dependencies for setup.
"""

module(
    name = "setup",
    version = "1.0",
    repo_name = "setup",
)

# It's important that this toolchain is registered before the toolchains from rules_python
# so this one can be picked when we run Python inside a container.
register_toolchains(
    "//libs/python:python_container_py_toolchain",
)

# ------------------------------------ platforms ------------------------------------ #
bazel_dep(
    name = "platforms",
    version = "0.0.8",
)

# ------------------------------------ rules_skylib ------------------------------------ #
bazel_dep(
    name = "bazel_skylib",
    version = "1.5.0",
)

# ------------------------------------ aspect_bazel_lib ------------------------------------ #
bazel_dep(
    name = "aspect_bazel_lib",
    version = "2.9.4",
)

bazel_lib_toolchains = use_extension("@aspect_bazel_lib//lib:extensions.bzl", "toolchains")
bazel_lib_toolchains.jq()
use_repo(bazel_lib_toolchains, "jq_toolchains")

# ------------------------------------ rules_pkg ------------------------------------ #
bazel_dep(
    name = "rules_pkg",
    version = "0.9.1",
)

# ------------------------------------ rules_task ------------------------------------ #
bazel_dep(
    name = "rules_task",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_task",
    path = "./libs/rules_task",
)

# ------------------------------------ rules_python ------------------------------------ #

PYTHON_VERSION = "3.11"

py_underscore_version = PYTHON_VERSION.replace(".", "_")

bazel_dep(
    name = "rules_python",
    version = "0.29.0",
)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    is_default = True,
    python_version = PYTHON_VERSION,
)
use_repo(
    python,
    "python_%s" % py_underscore_version,
    "python_%s_host" % py_underscore_version,
    "python_versions",
    "pythons_hub",
)

# ------------------------------------ rules_oci ------------------------------------ #
bazel_dep(
    name = "rules_oci",
    version = "1.4.3",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu_base",
    digest = "sha256:dfd64a3b4296d8c9b62aa3309984f8620b98d87e47492599ee20739e8eb54fbf",
    image = "index.docker.io/library/ubuntu",
    platforms = [
        "linux/amd64",
        "linux/arm64/v8",
    ],
)
use_repo(oci, "ubuntu_base")

# ------------------------------------ rules_release ------------------------------------ #
bazel_dep(
    name = "rules_release",
    version = "0.0.0",
)
local_path_override(
    module_name = "rules_release",
    path = "./libs/rules_release",
)
