[project]
name = ""
version = ""
description = ""
authors = [
    {name = "mvgijssel", email = "6029816+mvgijssel@users.noreply.github.com"},
]
dependencies = [
    "black==23.3.0",
    "pytest==7.4.3",
    "pytest-cov==3.0.0",
    "pytest-testinfra==9.0.0",
    "pytest-opentelemetry==1.0.0",
    "PyYAML==6.0",
    "pulumi==3.86.0",
    "pulumi-command==0.9.1",
    "pulumi-kubernetes==4.3.0",
    "pytest-homeassistant-custom-component==0.13.39",
    "tzdata==2023.3",
    "pyinfra==2.7",
    "semver==2.13.0",
    "bazel-runfiles==0.25.0",
    "requests==2.31.0",
    "pyOpenSSL==23.1.0",
    "setuptools>=68.2.2",
    "wheel>=0.41.2",
    "poetry-core>=1.7.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

