[project]
name = ""
version = ""
description = ""
authors = [
    {name = "mvgijssel", email = "6029816+mvgijssel@users.noreply.github.com"},
]
dependencies = [
    "black==23.3.0",
    "pytest==7.4.4",
    "pytest-cov==4.1.0",
    "pytest-testinfra==9.0.0",
    "pytest-opentelemetry==1.0.0",
    "pulumi==3.86.0",
    "pulumi-command==0.9.1",
    "pulumi-kubernetes==4.3.0",
    "pytest-homeassistant-custom-component==0.13.99",
    "tzdata==2023.3",
    "pyinfra==2.7",
    "semver==2.13.0",
    "bazel-runfiles==0.25.0",
    "requests==2.31.0",
    "setuptools==69.0.3",
    "wheel==0.42.0",
    "poetry-core==1.9.0",
    "cython>=3.0.8",
]
requires-python = ">=3.11,<3.13"
readme = "README.md"
license = {text = "MIT"}

