[tool.poetry]
name = "devenv"
version = "0.1.0"
description = ""
authors = ["mvgijssel <6029816+mvgijssel@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
pyinfra = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
