[project]
name = "devenv"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
  { name = "mvgijssel", email = "6029816+mvgijssel@users.noreply.github.com" },
]
dependencies = ["pyinfra>=3.0.1"]
requires-python = "==3.10.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false
