load("//tools/esphome:esphome.bzl", "esphome_build")

esphome_build(
    name = "esphome_nimble",
    srcs = [
        "custom_components/nimble.h",
    ],
    config = "esphome_config.yaml",
    toolchain = "//tools/esphome",
)

sh_binary(
    name = "extract_platformio",
    srcs = ["extract_platformio.sh"],
    args = [
        "$(location :esphome_nimble)",
    ],
    data = [
        ":esphome_nimble",
    ],
)
