load("//tools/packer:defs.bzl", "packer_image")
load("//tools/pyinfra:defs.bzl", "pyinfra_run")
load("//tools/vagrant:defs.bzl", "qcow_to_vagrant_box")
load("//tools/bazel:defs.bzl", "runner_binary")

packer_image(
    name = "hypervisor_image",
    output_image = "output/hypervisor.qcow2",
    templates = [
        "packer_qemu.pkr.hcl",
        "hypervisor.pkr.hcl",
    ],
    tools = [
        ":provision",
    ],
    variables = {
        "iso_file": "$(location @ubuntu_focal//file)",
        "iso_checksum": "8c8b5acb521f53a32e6ee53505e85d43958e42794c77dbb54dbe797097a63c5d",
        "ssh_username": "packer",
        "ssh_password": "packer",
        "cloud_init_meta_data_file": "$(location cloud-init/meta-data)",
        "cloud_init_user_data_file": "$(location cloud-init/user-data)",
        "provision_script": "$(location :provision)",
    },
    deps = [
        "cloud-init/meta-data",
        "cloud-init/user-data",
        "@ubuntu_focal//file",
    ],
)

qcow_to_vagrant_box(
    name = "hypervisor_image_box",
    src = ":hypervisor_image",
    src_sha = ":hypervisor_image.sha512",
)

runner_binary(
    name = "kitchen",
    out = "kitchen.sh",
    cmd = """
    export KITCHEN_ARGS="$$@"
    export KITCHEN_BINARY=$$(rlocation hypervisor_bundle/bin/kitchen)
    export KITCHEN_YAML=$$(rlocation setup/hypervisor/kitchen.yml)
    export VAGRANTFILE_CLOUD_INIT=$$(rlocation setup/hypervisor/Vagrantfile.cloud-init)
    export VAGRANT_EXPERIMENTAL=cloud_init,disks
    export VAGRANT_BOX=$$(rlocation setup/hypervisor/hypervisor_image_box.box)
    export CHEF_LICENSE=accept
    export TEST_DIR=$$(rlocation setup/hypervisor/test)
    export KITCHEN_CWD=$$(dirname $$KITCHEN_YAML)

    cd $$KITCHEN_CWD && $$KITCHEN_BINARY $$KITCHEN_ARGS
    """,
    data = [
        "Vagrantfile.cloud-init",
        "kitchen.yml",
        "test",
        ":hypervisor_image_box",
        "@hypervisor_bundle//:bin/kitchen",
    ],
    deps = [],
)

pyinfra_run(
    name = "provision",
    args = ["--sudo"],
    deploy = "deploy.py",
    env = {
        # Specifying the environment variables necessary for the vagrant connector and the associated Vagrantfile.
        "VAGRANT_CWD": "$$(dirname $$(rlocation setup/hypervisor/deploy.py))/.kitchen/kitchen-vagrant/default-ubuntu-focal",
    },
    inventory = "inventory.py",
    pyinfra_runtime = "//tools/pyinfra:pyinfra_runtime",
    deps = [
        "files/ignited.service",
    ],
)
