# load("//tools/packer:defs.bzl", "packer_image")
# load("//tools/pyinfra:defs.bzl", "pyinfra_run")
# load("//tools/vagrant:defs.bzl", "qcow_to_vagrant_box")
# load("@rules_python//python:pip.bzl", "compile_pip_requirements")

# compile_pip_requirements(
#     name = "requirements",
#     extra_args = ["--allow-unsafe"],
#     requirements_in = "requirements.txt",
#     requirements_txt = "requirements_lock.txt",
# )

# packer_image(
#     name = "hypervisor_image",
#     output_image = "output/hypervisor.qcow2",
#     templates = [
#         "packer_qemu.pkr.hcl",
#         "hypervisor.pkr.hcl",
#     ],
#     tools = [
#         ":provision",
#     ],
#     variables = {
#         "iso_file": "$(location @ubuntu_focal//file)",
#         "iso_checksum": "103ae8982d79891e7fb5321260dbd7e924ec2021d7357872d0c65e3231466d23",
#         "kernel": "$(location @ubuntu_focal_kernel//file)",
#         "initrd": "$(location @ubuntu_focal_initrd//file)",
#         "ssh_username": "packer",
#         "ssh_password": "packer",
#         "cloud_init_meta_data_file": "$(location cloud-init/meta-data)",
#         "cloud_init_user_data_file": "$(location cloud-init/user-data)",
#         "provision_script": "$(location :provision)",
#     },
#     deps = [
#         "cloud-init/meta-data",
#         "cloud-init/user-data",
#         "@ubuntu_focal//file",
#         "@ubuntu_focal_initrd//file",
#         "@ubuntu_focal_kernel//file",
#     ],
# )

# qcow_to_vagrant_box(
#     name = "hypervisor_image_box",
#     src = ":hypervisor_image",
#     src_sha = ":hypervisor_image.sha512",
#     tags = ["no-cache"],
# )

# # task(
# #     name = "kitchen",
# #     out = "kitchen.sh",
# #     cmd = """
# #     cd $$KITCHEN_CWD && $$KITCHEN_BINARY $$KITCHEN_ARGS
# #     """,
# #     data = [
# #         "Vagrantfile.cloud-init",
# #         "kitchen.yml",
# #         "test",
# #         ":hypervisor_image_box",
# #         "//tools/vagrant:multi-user-target-active.sh",
# #         "@hypervisor_bundle//:bin/kitchen",
# #     ],
# #     env = {
# #         "KITCHEN_ARGS": "$$@",
# #         "KITCHEN_BINARY": "$$(rlocation hypervisor_bundle/bin/kitchen)",
# #         "KITCHEN_YAML": "$$(rlocation setup/hypervisor/kitchen.yml)",
# #         "VAGRANTFILE_CLOUD_INIT": "$$(rlocation setup/hypervisor/Vagrantfile.cloud-init)",
# #         "VAGRANT_EXPERIMENTAL": "cloud_init,disks",
# #         "VAGRANT_BOX": "$$(rlocation setup/hypervisor/hypervisor_image_box.box)",
# #         "CHEF_LICENSE": "accept",
# #         "TEST_DIR": "$$(rlocation setup/hypervisor/test)",
# #         "KITCHEN_CWD": "$$(dirname $$KITCHEN_YAML)",
# #         "CONVERGE_SCRIPT": "$$(rlocation setup/tools/vagrant/multi-user-target-active.sh)",
# #     },
# # )

# pyinfra_run(
#     name = "provision",
#     srcs = [
#         "tasks/install_cni.py",
#         "tasks/install_consul.py",
#         "tasks/install_docker.py",
#         "tasks/install_envoy.py",
#         "tasks/install_nomad.py",
#         "tasks/install_qemu.py",
#     ],
#     args = ["--sudo"],
#     data = [
#         ".kitchen/.gitignore",
#         "files/consul.hcl",
#         "files/consul.service",
#         "files/nomad.hcl",
#         "files/nomad.service",
#     ],
#     deploy = "deploy.py",
#     env = {
#         # Specifying the environment variables necessary for the vagrant connector and the associated Vagrantfile.
#         "VAGRANT_CWD": "$$(dirname $$(rlocation setup/hypervisor/.kitchen/.gitignore))/kitchen-vagrant/default-ubuntu-focal",
#     },
#     inventory = "inventory.py",
# )
