load("//tools/command:command.bzl", "command")
load("@rules_python//python:pip.bzl", "compile_pip_requirements")
load("@infrastructure-requirements//:requirements.bzl", "all_requirements")

package(default_visibility = ["//visibility:public"])

compile_pip_requirements(
    name = "requirements",
    extra_args = ["--allow-unsafe"],
    requirements_in = "requirements.in",
    requirements_txt = "requirements.lock",
)

command(
    name = "pulumi",
    command_src = "//tools/pulumi",
    cwd = "{{ os.environ.get('BUILD_WORKING_DIRECTORY', os.getcwd()) }}",
    deps = all_requirements,
)
